# pixel-simulation

./: Cargo.toml  flake.nix  justfile
src/: color.rs  components.rs  main.rs
src/pixel_simulation/: cell.rs  cell_model.rs  cell_models.rs  chunk.rs  mod.rs
src/systems/: chunk_gizmo.rs  mod.rs  render_pixel_simulation.rs  setup_pixel_simulation.rs  simulate_pixel_simulation.rs  update_pixel_simulation.rs
