[package]
name = "pixel-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
ndarray = "0.15"
palette = "0.7"
rand = "0.8"
itertools = "0.11"
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", version = "0.5.0" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
