[package]
name = "pixel-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_egui = "0.23"
bevy_editor_pls = "0.6.0"
ndarray = "0.15"
palette = "0.7"
rand = "0.8"
itertools = "0.11"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
